src/objects/ADvendio__AdServer_ID_AdSpec_Assigment__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__AdServer_ID__c</fullName>
        <description>Enter the ad spec to which the ad server ID is to be assigned.</description>
        <inlineHelpText>Enter the ad spec to which the ad server ID is to be assigned.</inlineHelpText>
        <label>AdServer ID</label>
        <referenceTo>ADvendio__AdServer_ID__c</referenceTo>
        <relationshipLabel>AdServer ID AdSpec Assignments</relationshipLabel>
        <relationshipName>Adserver_ID_AdSpec_Assigments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Ad_Spec__c</fullName>
        <description>Enter the ad server ID to which the ad spec is to be assigned.</description>
        <inlineHelpText>Enter the ad server ID to which the ad spec is to be assigned.</inlineHelpText>
        <label>Ad Spec</label>
        <referenceTo>ADvendio__Ad_Specs__c</referenceTo>
        <relationshipLabel>AdServer ID AdSpec Assignments</relationshipLabel>
        <relationshipName>AdServer_ID_AdSpec_Assigments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Leading_Flight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be considered only if the type of associated AdServer ID is &quot;Placement&quot; and the type of AdServer is &quot;ADTECH&quot;.</description>
        <inlineHelpText>This will be considered only if the type of associated AdServer ID is &quot;Placement&quot; and the type of AdServer is &quot;ADTECH&quot;.</inlineHelpText>
        <label>Leading Flight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <description>Enter a UniqueKey (recommended: syntax) for this assignment.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter a UniqueKey (recommended: syntax) for this assignment.</inlineHelpText>
        <label>UniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>AdServer ID AdSpec Assignment</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Alle</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__AdServer_ID__c</columns>
        <columns>ADvendio__Leading_Flight__c</columns>
        <columns>ADvendio__Ad_Spec__c</columns>
        <columns>P7S1_IdOld__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>SomDig_kuerzlichangelegt</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>kürzlich angelegt</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>AAA-{00000}</displayFormat>
        <label>AdServer ID AdSpec Assignment No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AdServer ID AdSpec Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>